--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "type": "module",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build:lib": "node public/build-lib.js",
     "build:css": "postcss public/styles.css -o public/dist/styles.css",
-    "watch:css": "postcss public/styles.css -o public/dist/styles.css --watch"
+    "watch:css": "postcss public/styles.css -o public/dist/styles.css --watch",
+    "postinstall": "npm run build:lib && npm run build:css"
   },
   "keywords": [],
   "author": "Jaz",
@@ -16,7 +17,6 @@
   "dependencies": {
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
-    "express": "^5.1.0",
     "jquery": "^3.7.1",
     "jquery-validation": "^1.21.0"
   },
